# hermanprompt-admin-tool

./: .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
app/: __init__.py  auth.py  db.py  invitations.py  main.py  models.py  secret_vault.py  security.py  services.py
app/api/: auth.py
app/api/v1/: router.py
app/core/: __init__.py  config.py
app/schemas/: __init__.py  admins.py  audit.py  auth.py  common.py  groups.py  onboarding.py  reports.py  resellers.py  service_tiers.py  settings.py  system.py  tenants.py  users.py
docs/: ADMIN_AUTH_IMPLEMENTATION_CHECKLIST.md  Herman_Prompt_Admin_Tool_Dev_Build_Spec.docx  Herman_Prompt_Admin_Tool_Dev_Build_Spec_Production.docx  Herman_Prompt_Admin_Tool_Spec.docx  Herman_Prompt_Admin_Tool_Updated_Spec.docx  admin_auth_launcher_build_plan.md  admin_auth_launcher_codex_build_instructions.md  admin_auth_session_flow.md  current_build_status.md  frontend_architecture.md  herman_admin_auth_codex_instructions.md  herman_admin_use_case_support_matrix.xlsx  herman_portal_admin_auth_codex_instructions.md  herman_prompt_admin_wireframes.txt  hermanscience_full_use_cases.md  hermanscience_role_action_permission_matrix.md  portal_auth_and_invitation_spec.md  secrets_architecture.md
docs/herman_admin_demo_with_logo/: README.txt  index.html
scripts/: apply_vault_schema.py  sync_live_pg_to_local_sqlite.py  sync_local_admin_schema_to_live_pg.py
src/: main.tsx  styles.css  vite-env.d.ts
src/lib/: api.ts  auth.ts  format.ts  types.ts  userImport.ts
(+41 files in other folders)
