[project]
name = "herman-admin"
version = "0.1.0"
description = "Admin and analytics service for the Herman Prompt platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=46.0.0,<47.0.0",
  "fastapi>=0.116.0,<1.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "uvicorn>=0.35.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
